<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <ImageView
        android:id="@+id/ivDetail"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="@dimen/_16dp"
        android:contentDescription="@string/txt_imageview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tvFolower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:text="@string/txt_follower"
        app:layout_constraintStart_toStartOf="@+id/ivDetail"
        app:layout_constraintTop_toBottomOf="@+id/ivDetail" />

    <TextView
        android:id="@+id/tvFollowing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_following"
        app:layout_constraintBottom_toBottomOf="@+id/tvFolower"
        app:layout_constraintEnd_toEndOf="@+id/ivDetail"
        app:layout_constraintStart_toEndOf="@+id/tvFolower"
        app:layout_constraintTop_toTopOf="@+id/tvFolower" />

    <TextView
        android:id="@+id/tvNameDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:text="Name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFolower" />

    <TextView
        android:id="@+id/tvUserNamedetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_username"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="@+id/tvNameDetail"
        app:layout_constraintStart_toStartOf="@+id/tvNameDetail"
        app:layout_constraintTop_toBottomOf="@+id/tvNameDetail" />

    <TextView
        android:id="@+id/tvCompany"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/txt_company"
        app:layout_constraintEnd_toEndOf="@+id/tvUserNamedetail"
        app:layout_constraintStart_toStartOf="@+id/tvUserNamedetail"
        app:layout_constraintTop_toBottomOf="@+id/tvUserNamedetail" />

    <TextView
        android:id="@+id/tvLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/txt_location"
        app:layout_constraintEnd_toEndOf="@+id/tvCompany"
        app:layout_constraintStart_toStartOf="@+id/tvCompany"
        app:layout_constraintTop_toBottomOf="@+id/tvCompany" />
</androidx.constraintlayout.widget.ConstraintLayout>