<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_16dp">

    <ImageView
        android:id="@+id/ivItemUser"
        android:layout_width="@dimen/_50dp"
        android:layout_height="@dimen/_50dp"
        android:contentDescription="@string/txt_imageview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tvNameItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16dp"
        android:text="@string/txt_name"
        android:textSize="@dimen/_16sp"
        app:layout_constraintStart_toEndOf="@+id/ivItemUser"
        app:layout_constraintTop_toTopOf="@+id/ivItemUser" />

    <TextView
        android:id="@+id/tvUsernameItem"
        android:layout_width="58dp"
        android:layout_height="22dp"
        android:text="@string/txt_username"
        android:layout_marginStart="@dimen/_16dp"
        app:layout_constraintBottom_toBottomOf="@+id/ivItemUser"
        app:layout_constraintStart_toEndOf="@+id/ivItemUser"
        app:layout_constraintTop_toBottomOf="@+id/tvNameItem"
        app:layout_constraintVertical_bias="1.0" />
</androidx.constraintlayout.widget.ConstraintLayout>